--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ html, body {
 
 body {
   font-family: 'Lato', sans-serif;
-  background-image: url('https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-3/background.jpg');
+  background-image: url('https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwiHktjV8I3UAhXEKCYKHX5yB9YQjRwIBw&url=https%3A%2F%2Fwww.greatbigcanvas.com%2Fcategory%2Fscenery-by-region%2Fcaribbean%2Fcayman-islands%2F&psig=AFQjCNHdP-gXSICKiiYIZeEyVIEfAt2ZPA&ust=1495899130326440');
   background-position: center top;
   background-size: cover;
   margin: 0;
