--- a/css/PJ.css
+++ b/css/PJ.css
@@ -7,7 +7,7 @@ html, body {
 }
 
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Segoe Print', sans-serif;
   /*background-image: url('https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-3/background.jpg');*/
   background-image: url("https://images.pexels.com/photos/177567/pexels-photo-177567.jpeg?h=350&auto=compress&cs=tinysrgb");
   
